--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- @Kryslan para @Kryslan
+    Verificar diferenciação de cor dependendo do tema: https://stackoverflow.com/questions/42139798/how-to-set-textview-text-color-to-specific-theme-color -->
+
+    <!-- Cores Principais -->
+    <color name="primary">#FF9800</color>
+    <color name="secundary">#F57C00</color>
+    <color name="primary_light">#FFE0B2</color>
+    <color name="accent">#4CAF50</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+
+    <!-- Cores extras Auxiliares -->
+    <color name="verde_forte">#157347</color>
+    <color name="vermelho_forte">#BB2D3B</color>
+    <color name="cinza_claro">#F4F4F4</color>
+    <color name="cinza_view_desativada">#949494</color>
+
+    <!-- Outras Cores -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
