--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -121,6 +121,7 @@
                 android:textColor="@color/secondary_text"/>
 
             <TextView
+                android:id="@+id/cadastreSe_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
